temp/ingress/emcp-prod-keycloak.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    meta.helm.sh/release-name: emcp-prod-keycloak
    meta.helm.sh/release-namespace: emcp-prod
  creationTimestamp: "2025-02-18T07:55:12Z"
  generation: 2
  labels:
    app.kubernetes.io/component: keycloak
    app.kubernetes.io/instance: emcp-prod-keycloak
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/version: 26.1.0
    helm.sh/chart: keycloak-24.4.6
  name: emcp-prod-keycloak
  namespace: emcp-prod
  resourceVersion: "671781691"
  uid: 087a8f7e-bafa-4f82-b28a-985a3ebf8cb7
spec:
  ingressClassName: public
  rules:
  - host: auth.enclaive.cloud
    http:
      paths:
      - backend:
          service:
            name: emcp-prod-keycloak
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - auth.enclaive.cloud
    secretName: auth.enclaive.cloud-tls
status:
  loadBalancer:
    ingress:
    - ip: 185.112.181.201
